k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: performance-lab
  labels:
    app: login-service
spec:
  type: ClusterIP
  selector:
    app: login-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
