k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ingress
  namespace: performance-lab

spec:
  ingressClassName: nginx

  rules:
  - host: login.perflab.local
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 8080
